--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "portrayal",
+  "name": "storymaker",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://glowkeeper.github.io/storymaker",
   "dependencies": {
     "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow/tfjs": "^3.12.0",
@@ -19,6 +20,8 @@
   },
   "scripts": {
     "start": "GENERATE_SOURCEMAP=false react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "GENERATE_SOURCEMAP=false react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -40,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
