--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "storymaker",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "http://huckle.studio/storymaker",
+  "version": "1.1.0",
+  "homepage": "https://huckle.studio/storymaker",
   "dependencies": {
     "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow/tfjs": "^3.12.0",
