--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ permissions:
   id-token: write
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
@@ -29,14 +29,14 @@ jobs:
 
       - name: Build
         run: npm run build
-        env:
-          REACT_APP_NYT: ${{ secrets.REACT_APP_NYT }}
-          REACT_APP_FLICKR: ${{ secrets.REACT_APP_FLICKR }}
-          REACT_APP_FLICKRSECRET: ${{ secrets.REACT_APP_FLICKRSECRET }}
-          REACT_APP_OPENROUTER: ${{ secrets.REACT_APP_OPENROUTER }}
           
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          folder: build
-          branch: gh-pages
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
